--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="row">
           <div class="col">
             <h1 class="display-5">Private & Secure</h1>
-            <h1 class="display-4">Fully-encrypted wallet for Grin ツ</h1>
+            <h1 class="display-4">Confidential Grin ツ Wallet</h1>
             <p>
               Grin++ was designed and coded to be secure, fast, and reliable.
               Your keys, your coins, all transactions are done via TOR.
