Adding more information

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <img src="/svg/mood.svg" alt="Lightning Fast" class="feature" />
           <h2>Easy To Use</h2>
           <p>
-            Transact via file, http(s), grinbox, or TOR. 100% compatible with
+            Transact via file, http(s), or TOR. 100% compatible with
             grin-wallet. No port forwarding required.
           </p>
         </div>
@@ -285,6 +285,44 @@
             </a>
           </p>
           <p><small>macOS High Sierra (10.13) or later (64 bit only)</small></p>
+        </div>
+      </div>
+
+      <hr class="featurette-divider" />
+
+      <div class="row featurette">
+        <div class="col-md-7 order-md-2">
+          <h2 class="featurette-heading">
+            Multi-language.
+            <span class="text-muted">Turkish, Russian, Chinese and more.</span>
+          </h2>
+          <p class="lead">
+            With users worldwide, Grin++ is available on more than 5 different
+            languages.
+          </p>
+        </div>
+        <div class="col-md-5 order-md-1">
+          <img src="/screenshots/multi_language.png" alt="Multi-language" />
+        </div>
+      </div>
+
+      <hr class="featurette-divider" />
+
+      <div class="row featurette">
+        <div class="col-md-12">
+          <h2 class="featurette-heading">
+            Security Audit.
+            <span class="text-muted">+26k lines of code were audited.</span>
+          </h2>
+          <p class="lead">
+            A community funded Security Audit was performed by
+            <a href="https://smartdec.com/">SmartDec</a>. The task was to find
+            and describe security issues in the code base of the platform. The
+            code was completely manually analyzed taking into consideration the
+            Mimblewimble protocol specification and the C++ source code.
+            Recommendations were properly followed and critical issues
+            mitigated.
+          </p>
         </div>
       </div>
 
