--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             <span class="text-muted">+26k lines of code were audited.</span>
           </h2>
           <p class="lead">
-            A community funded Security Audit was performed by
+            A community funded <a href="/SmartDec%20Grin%2B%2B%20Security%20Audit.pdf">Security Audit</a> was performed by
             <a href="https://smartdec.com/">SmartDec</a>. The task was to find
             and describe security issues in the code base of the platform. The
             code was completely manually analyzed taking into consideration the
