adding contributing section

--- a/index.html
+++ b/index.html
@@ -353,6 +353,55 @@
       </div>
 
       <hr class="featurette-divider" />
+
+      <div class="container">
+        <h1 class="text-center">Contributing</h1>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-4">
+          <img src="/images/donate-icon.png" alt="bitcoin" /><br /><br />
+          <p>
+            <a
+              id="windows-download"
+              href="bitcoin:3G39h3G7HneymYL4kdgkDFLoB9uQ536Cw1"
+              class="btn btn-lg btn-outline-dark"
+            >
+              Donate
+            </a>
+          </p>
+          <p><small>3G39h3G7HneymYL4kdgkDFLoB9uQ536Cw1</small></p>
+        </div>
+        <div class="col-lg-4">
+          <img src="/images/coding-icon.png" alt="github" /><br /><br />
+          <p>
+            <a
+              id="linux-download"
+              href="https://github.com/GrinPlusPlus"
+              class="btn btn-lg btn-outline-dark"
+            >
+              Coding
+            </a>
+          </p>
+          <p>
+            <small>C++, TypeScript, NodeJS</small>
+          </p>
+        </div>
+        <div class="col-lg-4">
+          <img src="/images/bug-icon.png" alt="macOS" /><br /><br />
+          <p>
+            <a
+              id="macos-download"
+              href="https://github.com/GrinPlusPlus/GrinPlusPlusUI/issues"
+              class="btn btn-lg btn-outline-dark"
+            >
+              Report
+            </a>
+          </p>
+          <p><small>Document issues and bugs</small></p>
+        </div>
+      </div>
+
     </div>
     <footer class="container text-center">
       <p>
