adding link to store

--- a/index.html
+++ b/index.html
@@ -49,18 +49,20 @@
           </div>
           <div class="col justify-content-center align-self-center text-center">
             <img src="/banner.png" class="img-fluid" alt="Grin++" />
-            <a
-              id="download-link"
-              href="https://github.com/GrinPlusPlus/GrinPlusPlus/releases"
-              class="btn btn-custom btn-lg download"
-              style="width: 250px;"
-            >
-              <img
-                id="download-icon"
-                src="/images/windows.png"
-                alt="Download Grin++"
-                width="35px" />Download <small id="version"></small
-            ></a>
+            <p>
+              <a
+                id="download-link"
+                href="https://github.com/GrinPlusPlus/GrinPlusPlus/releases"
+                class="btn btn-custom btn-lg download"
+                style="width: 250px;"
+              >
+                <img
+                  id="download-icon"
+                  src="/images/windows.png"
+                  alt="Download Grin++"
+                  width="35px" />Download <small id="version"></small
+              ></a>
+            </p>
           </div>
         </div>
       </div>
@@ -315,13 +317,16 @@
             <span class="text-muted">+26k lines of code were audited.</span>
           </h2>
           <p class="lead">
-            A community funded <a href="/SmartDec%20Grin%2B%2B%20Security%20Audit.pdf">Security Audit</a> was performed by
-            <a href="https://smartdec.com/">SmartDec</a>. The task was to find
-            and describe security issues in the code base of the platform. The
-            code was completely manually analyzed taking into consideration the
-            Mimblewimble protocol specification and the C++ source code.
-            Recommendations were properly followed and critical issues
-            mitigated.
+            A community funded
+            <a href="/SmartDec%20Grin%2B%2B%20Security%20Audit.pdf"
+              >Security Audit</a
+            >
+            was performed by <a href="https://smartdec.com/">SmartDec</a>. The
+            task was to find and describe security issues in the code base of
+            the platform. The code was completely manually analyzed taking into
+            consideration the Mimblewimble protocol specification and the C++
+            source code. Recommendations were properly followed and critical
+            issues mitigated.
           </p>
         </div>
       </div>
@@ -402,6 +407,17 @@
         </div>
       </div>
 
+      <div class="container text-center">
+        <p>
+          <a
+            href="https://shop.grinplusplus.com/"
+            class="btn btn-outline-dark btn-lg download"
+            >VISIT STORE
+          </a>
+        </p>
+      </div>
+
+      <hr class="featurette-divider" />
     </div>
     <footer class="container text-center">
       <p>
