--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
       <hr class="featurette-divider" />
 
       <div class="container">
-        <h1 class="text-center">Contributing</h1>
+        <a name="contributing"><h1 class="text-center">Contributing</h1></a>
       </div>
 
       <div class="row">
