--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
               Donate
             </a>
           </p>
-          <p><small>3G39h3G7HneymYL4kdgkDFLoB9uQ536Cw1</small></p>
+          <p><small>bitcoin:3G39h3G7HneymYL4kdgkDFLoB9uQ536Cw1</small></p>
         </div>
         <div class="col-lg-4">
           <img src="/images/coding-icon.png" alt="github" /><br /><br />
