--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                   id="download-icon"
                   src="/images/windows.png"
                   alt="Download Grin++"
-                  width="35px" />Download <small id="version"></small
+                  width="35" />Download <small id="version"></small
               ></a>
             </p>
           </div>
@@ -360,7 +360,7 @@
       <hr class="featurette-divider" />
 
       <div class="container">
-        <a name="contributing"><h1 class="text-center">Contributing</h1></a>
+        <h1 class="text-center">Contributing</h1>
       </div>
 
       <div class="row">
@@ -368,7 +368,6 @@
           <img src="/images/donate-icon.png" alt="bitcoin" /><br /><br />
           <p>
             <a
-              id="windows-download"
               href="bitcoin:3G39h3G7HneymYL4kdgkDFLoB9uQ536Cw1"
               class="btn btn-lg btn-outline-dark"
             >
@@ -381,7 +380,6 @@
           <img src="/images/coding-icon.png" alt="github" /><br /><br />
           <p>
             <a
-              id="linux-download"
               href="https://github.com/GrinPlusPlus"
               class="btn btn-lg btn-outline-dark"
             >
@@ -396,7 +394,6 @@
           <img src="/images/bug-icon.png" alt="macOS" /><br /><br />
           <p>
             <a
-              id="macos-download"
               href="https://github.com/GrinPlusPlus/GrinPlusPlusUI/issues"
               class="btn btn-lg btn-outline-dark"
             >
@@ -422,10 +419,10 @@
     <footer class="container text-center">
       <p>
         <a href="https://github.com/GrinPlusPlus"
-          ><img src="/images/github.png" width="40px"
+          ><img alt="Github" src="/images/github.png" width="40"
         /></a>
         <a href="https://t.me/GrinPP"
-          ><img src="/images/telegram.png" width="40px"
+          ><img alt="Telegram" src="/images/telegram.png" width="40"
         /></a>
       </p>
     </footer>
