--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 id="download-link"
                 href="https://github.com/GrinPlusPlus/GrinPlusPlus/releases"
                 class="btn btn-custom btn-lg download"
-                style="width: 250px;"
+                style="width: 250px"
               >
                 <img
                   id="download-icon"
@@ -120,15 +120,23 @@
               <img
                 class="d-block w-100"
                 src="/screenshots/grinpp_wallet.png"
-                style="width: calc(500px + 40vw);"
+                style="width: calc(500px + 40vw)"
                 alt="Grin++ Wallet"
               />
             </div>
             <div class="carousel-item">
               <img
                 class="d-block w-100"
+                src="/screenshots/grinpp_init.png"
+                style="width: calc(500px + 40vw)"
+                alt="Coin Control"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                class="d-block w-100"
                 src="/screenshots/grinpp_create_account.png"
-                style="width: calc(500px + 40vw);"
+                style="width: calc(500px + 40vw)"
                 alt="Create Account"
               />
             </div>
@@ -136,24 +144,40 @@
               <img
                 class="d-block w-100"
                 src="/screenshots/grinpp_create_wallet.png"
-                style="width: calc(500px + 40vw);"
+                style="width: calc(500px + 40vw)"
                 alt="Create Grin Wallet"
               />
             </div>
             <div class="carousel-item">
               <img
                 class="d-block w-100"
-                src="/screenshots/grinpp_restore_wallet.png"
-                style="width: calc(500px + 40vw);"
+                src="/screenshots/grinpp_send_coins.png"
+                style="width: calc(500px + 40vw)"
                 alt="Restore Wallet"
               />
             </div>
             <div class="carousel-item">
               <img
                 class="d-block w-100"
-                src="/screenshots/grinpp_coin_control.png"
-                style="width: calc(500px + 40vw);"
-                alt="Coin Control"
+                src="/screenshots/grinpp_receive_coins.png"
+                style="width: calc(500px + 40vw)"
+                alt="Restore Wallet"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                class="d-block w-100"
+                src="/screenshots/grinpp_console.png"
+                style="width: calc(500px + 40vw)"
+                alt="Restore Wallet"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                class="d-block w-100"
+                src="/screenshots/grinpp_help.png"
+                style="width: calc(500px + 40vw)"
+                alt="Restore Wallet"
               />
             </div>
           </div>
@@ -214,7 +238,7 @@
           </p>
         </div>
         <div class="col-md-5 order-md-1">
-          <img src="/screenshots/coincontrol.png" alt="Coin Control" />
+          <img src="/screenshots/coin_control.png" alt="Coin Control" />
         </div>
       </div>
 
@@ -251,7 +275,7 @@
               id="windows-download"
               href="https://github.com/GrinPlusPlus/GrinPlusPlus/releases"
               class="btn btn-lg btn-outline-dark"
-              style="width: 150px;"
+              style="width: 150px"
             >
               Windows
             </a>
@@ -265,7 +289,7 @@
               id="linux-download"
               href="https://github.com/GrinPlusPlus/GrinPlusPlus/releases"
               class="btn btn-lg btn-outline-dark"
-              style="width: 150px;"
+              style="width: 150px"
             >
               Linux
             </a>
@@ -281,7 +305,7 @@
               id="macos-download"
               href="https://github.com/GrinPlusPlus/GrinPlusPlus/releases"
               class="btn btn-lg btn-outline-dark"
-              style="width: 150px;"
+              style="width: 150px"
             >
               macOS
             </a>
