--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 class="d-block w-100"
                 src="/screenshots/grinpp_send_coins.png"
                 style="width: calc(500px + 40vw)"
-                alt="Restore Wallet"
+                alt="Send Coins"
               />
             </div>
             <div class="carousel-item">
@@ -161,7 +161,7 @@
                 class="d-block w-100"
                 src="/screenshots/grinpp_receive_coins.png"
                 style="width: calc(500px + 40vw)"
-                alt="Restore Wallet"
+                alt="Receive Coins"
               />
             </div>
             <div class="carousel-item">
@@ -169,7 +169,7 @@
                 class="d-block w-100"
                 src="/screenshots/grinpp_console.png"
                 style="width: calc(500px + 40vw)"
-                alt="Restore Wallet"
+                alt="Wallet Console"
               />
             </div>
             <div class="carousel-item">
@@ -323,8 +323,7 @@
             <span class="text-muted">Turkish, Russian, Chinese and more.</span>
           </h2>
           <p class="lead">
-            With users worldwide, Grin++ is available on more than 5 different
-            languages.
+            With users worldwide, Grin++ is available in 15 different languages.
           </p>
         </div>
         <div class="col-md-5 order-md-1">
