--- a/index.html
+++ b/index.html
@@ -265,16 +265,17 @@
 
       <div class="container">
         <h1 class="text-center">Download</h1>
+        <br />
       </div>
 
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-3">
           <img src="/images/windows.png" alt="Windows" /><br /><br />
           <p>
             <a
               id="windows-download"
               href="https://github.com/GrinPlusPlus/GrinPlusPlus/releases"
-              class="btn btn-lg btn-outline-dark"
+              class="btn btn-lg btn-outline-light"
               style="width: 150px"
             >
               Windows
@@ -282,13 +283,13 @@
           </p>
           <p><small>Windows 7 or later (64 bit only)</small></p>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-3">
           <img src="/images/linux.png" alt="Linux" /><br /><br />
           <p>
             <a
               id="linux-download"
               href="https://github.com/GrinPlusPlus/GrinPlusPlus/releases"
-              class="btn btn-lg btn-outline-dark"
+              class="btn btn-lg btn-outline-light"
               style="width: 150px"
             >
               Linux
@@ -298,19 +299,33 @@
             <small>Ubuntu 16.04.2+, Debian 10+ (64 bit only)</small>
           </p>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-3">
           <img src="/images/apple.png" alt="macOS" /><br /><br />
           <p>
             <a
               id="macos-download"
               href="https://github.com/GrinPlusPlus/GrinPlusPlus/releases"
-              class="btn btn-lg btn-outline-dark"
+              class="btn btn-lg btn-outline-light"
               style="width: 150px"
             >
               macOS
             </a>
           </p>
           <p><small>macOS High Sierra (10.13) or later (64 bit only)</small></p>
+        </div>
+        <div class="col-lg-3">
+          <img src="/images/android.png" alt="Android" /><br /><br />
+          <p>
+            <a
+              id="android-download"
+              href="https://play.google.com/store/apps/details?id=com.grinplusplus.mobile"
+              class="btn btn-lg btn-outline-light"
+              style="width: 150px"
+            >
+              Android
+            </a>
+          </p>
+          <p><small>Android 9 or later (64 bit only)</small></p>
         </div>
       </div>
 
@@ -384,15 +399,16 @@
 
       <div class="container">
         <h1 class="text-center">Contributing</h1>
+        <br />
       </div>
 
       <div class="row">
         <div class="col-lg-4">
-          <img src="/images/donate-icon.png" alt="bitcoin" /><br /><br />
+          <img src="/images/bitcoin-icon.png" alt="bitcoin" /><br /><br />
           <p>
             <a
-              href="bitcoin:3G39h3G7HneymYL4kdgkDFLoB9uQ536Cw1"
-              class="btn btn-lg btn-outline-dark"
+              href="/images/donate-icon.png"
+              class="btn btn-lg btn-outline-light"
             >
               Donate
             </a>
@@ -404,7 +420,7 @@
           <p>
             <a
               href="https://github.com/GrinPlusPlus"
-              class="btn btn-lg btn-outline-dark"
+              class="btn btn-lg btn-outline-light"
             >
               Coding
             </a>
@@ -414,27 +430,17 @@
           </p>
         </div>
         <div class="col-lg-4">
-          <img src="/images/bug-icon.png" alt="macOS" /><br /><br />
+          <img src="/images/shopping-icon.png" alt="shopping" /><br /><br />
           <p>
             <a
-              href="https://github.com/GrinPlusPlus/GrinPlusPlusUI/issues"
-              class="btn btn-lg btn-outline-dark"
+              href="https://shop.grinplusplus.com/"
+              class="btn btn-lg btn-outline-light"
             >
               Report
             </a>
           </p>
-          <p><small>Document issues and bugs</small></p>
+          <p><small>Visit out store</small></p>
         </div>
-      </div>
-
-      <div class="container text-center">
-        <p>
-          <a
-            href="https://shop.grinplusplus.com/"
-            class="btn btn-outline-dark btn-lg download"
-            >VISIT STORE
-          </a>
-        </p>
       </div>
 
       <hr class="featurette-divider" />
