fixing android icon

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
       </div>
 
       <div class="row">
-        <div class="col-lg-3">
+        <div class="col-lg-4">
           <img src="/images/windows.png" alt="Windows" /><br /><br />
           <p>
             <a
@@ -283,7 +283,7 @@
           </p>
           <p><small>Windows 7 or later (64 bit only)</small></p>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-4">
           <img src="/images/linux.png" alt="Linux" /><br /><br />
           <p>
             <a
@@ -299,7 +299,7 @@
             <small>Ubuntu 16.04.2+, Debian 10+ (64 bit only)</small>
           </p>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-4">
           <img src="/images/apple.png" alt="macOS" /><br /><br />
           <p>
             <a
@@ -313,7 +313,10 @@
           </p>
           <p><small>macOS High Sierra (10.13) or later (64 bit only)</small></p>
         </div>
-        <div class="col-lg-3">
+      </div>
+
+      <div class="row">
+        <div class="col-lg-4">
           <img src="/images/android.png" alt="Android" /><br /><br />
           <p>
             <a
