--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
               href="/images/donate-icon.png"
               class="btn btn-lg btn-outline-light"
             >
-              Donate
+              Donating
             </a>
           </p>
           <p><small>bitcoin:3G39h3G7HneymYL4kdgkDFLoB9uQ536Cw1</small></p>
@@ -435,7 +435,7 @@
               href="https://shop.grinplusplus.com/"
               class="btn btn-lg btn-outline-light"
             >
-              Report
+              Shopping
             </a>
           </p>
           <p><small>Visit out store</small></p>
@@ -446,11 +446,8 @@
     </div>
     <footer class="container text-center">
       <p>
-        <a href="https://github.com/GrinPlusPlus"
-          ><img alt="Github" src="/images/github.png" width="40"
-        /></a>
         <a href="https://t.me/GrinPP"
-          ><img alt="Telegram" src="/images/telegram.png" width="40"
+          ><img alt="Telegram" src="/images/telegram.png" width="60"
         /></a>
       </p>
     </footer>
